[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GUI/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Background/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/PixelFont/PixelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Styles/Button_Styles/Hover_Button_Style.stylebox" type="StyleBox" id=4]
[ext_resource path="res://Assets/Styles/Button_Styles/Normal_Button_Style.stylebox" type="StyleBox" id=5]
[ext_resource path="res://Assets/Styles/Slider_Styles/Grabber Icon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Styles/Slider_Styles/Slider_Stylebox.stylebox" type="StyleBox" id=7]
[ext_resource path="res://Assets/Styles/Slider_Styles/Grabber_Style.stylebox" type="StyleBox" id=8]

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 120.033, 66.4257 )
texture = ExtResource( 2 )

[node name="MuteAudio" type="Label" parent="."]
margin_left = 82.5511
margin_top = 61.6327
margin_right = 163.551
margin_bottom = 79.6327
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = ExtResource( 3 )
text = "Mute Audio"

[node name="MuteButton" type="Button" parent="."]
margin_left = 88.6061
margin_top = 79.3998
margin_right = 140.606
margin_bottom = 97.3998
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "  Mute  "

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 79.7179
margin_top = 110.755
margin_right = 162.718
margin_bottom = 128.755
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = " Main Menu "

[node name="MasterVolume" type="Label" parent="."]
margin_left = 19.0732
margin_top = 19.9305
margin_right = 141.073
margin_bottom = 58.9305
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 3 )
text = "Master Volume
"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
margin_left = 31.0732
margin_top = 37.9305
margin_right = 91.0732
margin_bottom = 45.9305
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = ExtResource( 7 )
custom_styles/grabber_area = ExtResource( 8 )
max_value = 80.0
ticks_on_borders = true

[node name="BackgroundVolume" type="Label" parent="."]
margin_left = 137.073
margin_top = 19.9305
margin_right = 248.073
margin_bottom = 58.9305
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 3 )
text = "Music Volume 0
"

[node name="BackgroundVolumeSlider" type="HSlider" parent="."]
margin_left = 151.073
margin_top = 37.9305
margin_right = 211.073
margin_bottom = 45.9305
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = ExtResource( 7 )
custom_styles/grabber_area = ExtResource( 8 )
max_value = 80.0
ticks_on_borders = true

[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="BackgroundVolumeSlider" to="." method="_on_BackgroundVolumeSlider_value_changed"]
